tests/reference/asr-func_arg_array-609769c.stderr
semantic error: Array Passed in function has less elements than function expects.
 --> tests/errors/func_arg_array.f90:4:14
  |
4 |     i = temp(myArray)
  |              ^^^^^^^ 
